# AoC

./: .gitignore  .gitmodules  README.md  Random_Py_snippets.py  code.py.template  code_day1_bak.py  init.fish  init.nu  init.py  make_code.py  old_init.py  pyproject.toml  requirements.txt  tmp.py  update_lights.py  wait_for_6.fish  wait_for_6.nu
.devcontainer/: Containerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  format_python.yml  readme-stars.yml  update_lights zero.yml  update_lights.yml
2015/01/: code.py
2015/02/: code.py
2015/03/: code.py
2015/04/: code.py
2015/05/: code.py  example.txt
2015/06/: code.py
2015/07/: code.py  example.txt
2015/08/: code.py
2015/09/: code.py
2015/10/: code.py
2015/11/: code.py
2015/12/: code.py  example.txt
2015/13/: code.py
2015/14/: code.py  example.txt
2015/15/: code.py
2015/16/: code.py
2015/17/: code.py  example.txt
2015/19/: code.py  example.txt
2016/01/: code.py  example.txt
2019/01/: code.py  example.txt
2020/01/: code.py
2020/02/: code.py
2020/03/: code.py
2020/04/: code.py
2020/05/: code.py
2020/06/: code.py
2020/07/: code.py
2020/08/: code.py
2020/09/: code.py
2020/10/: code.py
2020/11/: code.py
2020/12/: code.py
2020/13/: code.py
2020/14/: code.py
2020/15/: code.py  statement.html
2020/16/: code.py
2020/17/: code.py
2020/18/: code.py
2020/19/: code.py
2020/20/: code.py
2020/21/: code.py
2020/22/: code.py
2020/23/: code.py  statement.html
2020/24/: code.py
2020/25/: code.py
(+149 files in other folders)
